style.css
@import url(https://db.onlinewebfonts.com/c/9e06e3bdc9b18dc3e5b2a21e559020b8?family=Canela-Black);
@import url(https://db.onlinewebfonts.com/c/53c0b5ca4d4f261f0b4bacba005484ef?family=F12+Akzidenz+Grotesk%2A%2A+Roman+05003);
@import url(https://db.onlinewebfonts.com/c/c4c64940fb49e72ab35c05815aeef673?family=Akzidenz-Grotesk+%28R%29+Schulbuch+Regular);
@import url(https://db.onlinewebfonts.com/c/f28c3627352d7f508b8c097b04f300c5?family=Spectral+Bold);
@import url(https://db.onlinewebfonts.com/c/66a272b6eda3e59b685a1bd2e0c33339?family=Akzidenz-Grotesk+%28R%29+Schulbuch+Medium);

:root {

    --clr-text-main: black;
    --clr-text-light: white;
    --clr-text-inactive: grey;
    --clr-text-accent: #DD406D;
    --clr-gradient-001: linear-gradient(to right, #dd406d, #745fde);
    --clr-gradient-fade: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
    --clr-hr-light: #e5e7eb;
    --clr-hr-dull: #bbbbbb;
    --clr-hover-001: #0000001a;

    --ff-primary: 'Akzidenz-Grotesk (R) Schulbuch Regular', 'F12 Akzidenz Grotesk** Roman 05003', sans-serif;
    --ff-main-head: 'Canela-Black', 'Spectral Bold', sans-serif;
    --ff-main-bold: 'Akzidenz-Grotesk (R) Schulbuch Medium', 'Akzidenz-Grotesk (R) Schulbuch Regular', sans-serif;

    --fw-001: 600;

    --fs-120: .75rem;
    --fs-140: .875rem;
    --fs-150: 0.9375rem;
    --fs-160: 1rem;
    --fs-180: 1.125rem;
    --fs-200: 1.25rem;
    --fs-220: 1.375rem;
    --fs-240: 1.5rem;

    --transtion-header: ease-in-out 1s
}


/* -------Reset------- */

*,
*::before,
*::after {
  box-sizing: border-box;
}
html {
  height: 100vh;
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;
  font-family: var(--ff-primary);
  color: var(--clr-text-main);
  overflow-x: hidden;
  scroll-behavior: smooth;
}

* {
  margin: 0;
  padding: 0;
  font: inherit;
}

img,
svg {
  display: block;
  max-width: 100%;
}

input,
textarea,
button,
select {
  font: inherit;
}

p {
  font-size: var(--fs-200);
}

a {
    text-decoration: none;
    color: inherit;
}

/* ----- Utility ----- */

.sticky {
    position: fixed;
    top: 0;
    left: 0;
}

.ease {
    transition: all .3s;
}

.to-ease {
    opacity: 0;
    transition-delay: .5s ;
    transition: opacity 500ms;
}

.to-ease.hard-ease {
    opacity: 1;
}

.red {
    color: red;
}

.green {
    color: green;
}

.pink {
    color: var(--clr-text-accent);
}

.flex {
    display: flex;
}

.grid {
    display: grid;
}

.inactive-feat {
    color: var(--clr-text-inactive);
}

.active-feat {
    color: var(--clr-text-main);
}

strong {
    font-weight: var(--fw-001);
}

.breaking > h5::before {
    content: '';
    background-image: url(Assets/decryt-mark.svg);
    background-size: cover;
    position: relative;
    display: inline-block;
    height: 12px;
    width: 10px;
    margin-right: 7px;
    vertical-align: -4%;
}

.bulletin > h5::before {
    content: '•';
    color: var(--clr-text-accent);
    margin-right: 7px;
    font-size: var(--fs-220);
    float: left;
}

.bulletin > h5 {
    overflow-y: hidden;
    height: 16px;
}

.bulletin > a > p {
    border-left: 1px solid var(--clr-hr-dull);
}

/* ------- header ------- */

.body-header {
    width: 100%;
    margin-bottom: 2px;
    background-color: var(--clr-text-light);
    opacity: 98%;
    z-index: 999;
    /* transform: translateY(-50px) */
}

.header-main {
    justify-content: space-between;
    align-items: center;
    height: 40px;
    /* padding-top: 60px; */
}

hr {
    margin-top: 10px;
    background-color: var(--clr-hr-light);
    border: none;
    height: 1px;
    width: 100%;
}

.header-wrapper {
    max-width: 1440px;
    padding: 15px 60px 10px;
    margin: auto;
}

.header-wrapper > div {
    width: 100%;
    height: 94px;
    position: relative;
    flex-direction: column;
    justify-content: center;
    
}

.header-left, .herder-center, .header-right {
    height: 100%;
}

.bi-search:hover {
    cursor: pointer;
}

.header-left > a > img{
    height: 27px;
}

.header-left {
    font-size: 30px;
    flex-direction: row;
    gap: 40px;
    align-items: center;
}

.header-center {
    margin-right: -135px;
    transform: translateY(50px);
}
.header-right {
    gap: 20px;
    align-items: center;
}

.header-right > button, .lang-select > select {
    border: transparent;
    border-radius: 5px;
}

.header-right > button {
    padding: 2px;
    width: 100px;
    height: 40px;
    background-color: var(--clr-text-main);
    color: var(--clr-text-light);
}

.header-right > button:hover {
    cursor: pointer;
}

.lang-select > select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    padding: 2px 10px;   
    width: 90px;
    height: 30px;
}

.lang-select > select:hover {
    background-color: var(--clr-hover-001);
    cursor: pointer;
}

.header-right > select::-ms-expand {
    display: none;
}

.lang-select {
    position: relative;
    height: max-content;
    width: max-content;
}

.lang-select::after {
    content: '\F229';
    font-family: 'Bootstrap-icons', normal;
    color: var(--clr-text-main);
    position: absolute;
    bottom: 5px;
    right: 7px;

}

.logo {
    width: max-content;
    position: absolute;
    left: 50%;
    top: -60%;
    transform: translateX(-50%);
}

.logo > a {
    align-items: center;
    justify-content: space-between;
    max-width: 219px;
}

.logo > a :first-child {
    max-width: 29%;
}

.logo > a :last-child {
    width: 100%;
    max-width: 64%;
    height: auto;
}

.header-center > nav {
    width: 500px;
    justify-content: space-between;
}

.header-center > nav > a {
    color: var(--clr-text-main);
    text-decoration: none;
    font-family: var(--ff-primary);
    font-size: var(--fs-120);
    transition: ease-in 0.1s;
}

.header-center > nav > a:hover {
    color: var(--clr-text-accent);
}

 /* Sticky Styles */

.sticky + .crypto-carousel-container {
    margin-top: 130px;
}

.sticky .logo > a {
    width: ;
}

/* ------ Carousel ------ */

.crypto-carousel-container {
    max-width: 1903px;
    height: 47px;
    position: relative;
    overflow: hidden;
    align-items: center;

    &::before {
        left: 0;
    }

    &::after {
        bottom: 0;
        right: 0;
        transform: rotate(180deg);
    }
}

.crypto-carousel-container > hr {
    position: absolute;
    bottom: 0;
}

.crypto-carousel-container::before,
.crypto-carousel-container::after {
    content: "";
    height: 100%;
    width: 70px;
    background: var(--clr-gradient-fade);
    position: absolute;
}

.crypto-carousel {
    width: calc(250px * 20);
    height: max-content;
    animation: scroll 40s linear infinite;
}

@keyframes scroll {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(calc(-250px * 10))
    }
}

.slide {
    width: 250px;
    height: 100%;
}

.slide > span {
    font-size: var(--fs-140);
    text-align: center;
    gap: 7px;
    justify-content: center
}


/* ------ Ad Banner ------ */

.ad-container {
    margin: 30px 0;
}

.ad-container > img {
    margin: 0 auto;
    height: auto;
    width: min(728px, 80%);
}

/* ----------- Website Body ----------- */

main {
    width: 100%;
}

article {
    max-width: 1440px;
    padding: 0 60px;
    margin: 0 auto;
    grid-template-columns: repeat(12, 1fr);
    gap: 20px;
    height: max-content;
    margin-bottom: 100px;
}

.new {
    height: 100px;
}

li {
    list-style-type: none;
}

.to-page-button {
    font-size: var(--fs-160);
    font-weight: 600;
    text-decoration: none;
    color: var(--clr-text-main);
    width: 100%;
}

h4 {
    width: max-content;
    margin: 0 auto;
}

/* Shared Column Styles */

.news-explorer-column, .hubs-column {
    grid-column: span 3;
}

.news-explorer-header, .hubs-column-header {
    height: 40px;
}

.news-explorer-header > h3,
.hubs-header > h3 {
    font-family: var(--ff-main-head);
    font-size: var(--fs-180);
    display: block;
    margin-bottom: 5px ;
}

.news-explorer-header > p,
.hubs-header > p {
    font-family: var(--ff-primary);
    font-size: var(--fs-160);
    display: block;
}

.news-explorer-column, .hubs-column {
    width: 315px;
}

.news-explorer-column, .feat-news {
    position: relative;
    height: 100%;
}

:is(.news-explorer-column, .feat-news, .hubs-column) > footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    max-width: 600px
}

/* News Explorer */

.news-explorer-feed {
    margin-top: 20px;
    height: 700px;
    overflow:auto;
}

.nwsx-headline-list {
    flex-direction: column;
    gap: 15px;
    padding: 0 6px;
}

.nwsx-item > h5 {
    font-size: var(--fs-140);
    width: 150px;
    background-image: var(--clr-gradient-001);
    position: relative;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
}

.nwsx-item > a > p {
    font-size: var(--fs-150);
    margin-top: 2px;
    padding: 3px 0 3px 12px;
    margin-left: 4px;
    width: 250px;
}

 /* Feteaured News */


.feat-news {
    max-width: 650px;
    grid-column: span 6;
    padding: 0 25px;
}

.main-feat-poster {
    max-width: 640px;
    max-height: 420px;
    position: relative;
    margin-bottom: 25px;
}

.main-feat-img {
    object-fit: cover;
    border-radius: 5px;
    width: 100%;
    height: 100%;
} 

.cat-sticker {
    background-color: var(--clr-text-light);
    font-size: var(--fs-140);
    width: max-content;
}

.feat-sticker {
    position: absolute;
    bottom: 15px;
    left: 15px;
    padding: 3px 10px;
    border-radius: 7px;
}

.feat-item {
    width: 50%;
    display: inline-block;
}

.feat-item > a {
    color: var(--clr-text-main);
    text-decoration: none;
}

.main-feat-headline {
    font-size: var(--fs-240);
    font-family: var(--ff-main-bold);
    display: block;
    margin-bottom: 5px;
}

.choice-feat-container > ul {
    flex-direction: row;
}

.feat-list {
    flex-direction: column;
    gap: 10px;
    margin: 15px 0;

}

.feat-list-items > a > *,
.cat-sticker {
    margin-bottom: 2px;
}

.feat-list-items > a > h3 {
    font-size: var(--fs-200);
    font-weight: 500;
    color: var(--clr-text-main);
    display: block;
}

.feat-times > a > span {
    font-size: var(--fs-140);
    margin-right: 5px;
}

 /* Hubs Column */

.hubs-column {
    height: max-content;
}

.hubs-cards-list {
    margin-top: 15px
}

.hubs-cards-list > li {
    width: 100%;
    border-radius: 15px;
    overflow: hidden;
    -webkit-box-shadow: 0px 1px 8px -1px rgba(0,0,0,0.26);
    -moz-box-shadow: 0px 1px 8px -1px rgba(0,0,0,0.26);
    box-shadow: 0px 1px 8px -1px rgba(0,0,0,0.26);
}

.hubs-list-item {
    width: 100%;
    margin-bottom: 25px;
}

.hubs-list-item > a {
    text-decoration: none;
    color: var(--clr-text-main);
}

.hub-card {
    flex-direction: column;
}

.card-info {
    flex-direction: column;
    gap: 5px;
}

.hub-card > img {
    height: 160px;
    object-fit: cover;
}

.hub-card > hr {
    width: 90%;
    margin: 0 auto;
}

.card-info {
    padding: 16px 20px 32px;
}

.hub-title {
    font-size: var(--fs-160);
    font-family: var(--ff-primary);
}

.hub-midsection > h2 {
    color: var(--clr-text-main);
    font-size: var(--fs-180);
    font-family: var(--ff-main-bold);
    max-width: 240px;
}

.hub-midsection > svg {
    height: 20px;
    width: 20px;
    margin-left: 10px;
    margin-top: 1px;
}

.to-hub-cta {
    font-family: var(--ff-main-bold);
    font-size: var(--fs-160);
    color: var(--clr-text-accent);
    gap: 10px;
    margin-top: 5px;
}

.card-info > h4 {
    margin: 10px 0;
}

.stat-badges,
.stat-claimed {
    flex-direction: column;
}

.stat-badges {
    margin-right: 50px
}

.stat-badges > *,
.stat-claimed > * {
    font-family: var(--ff-main-bold);
    font-size: var(--fs-140);
}

.stat-badges :first-child,
.stat-claimed :first-child {
    color: var(--clr-text-inactive);
}

.stat-badges :last-child,
.stat-claimed :last-child {
    color: var(--clr-text-main);
}

